<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="KEY_INLINE"
        android:title="@string/inline">
        <CheckBoxPreference
            android:key="KEY_CHECKBOX"
            android:summary="@string/inline_checkbox_summary"
            android:title="@string/inline_checkbox_title"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="KEY_DIALOGBASED"
        android:title="@string/dialogbased_title">
        <EditTextPreference
            android:key="KEY_ANIMAL"
            android:title="@string/edit_text_title"
            android:summary="@string/edit_text_summary"
            android:dialogTitle="@string/animal_summary"/>
        <ListPreference
            android:key="KEY_LIST_PREFERENCE_I"
            android:title="@string/list_preference_title_O"
            android:summary="@string/list_preferenc_summary_O"
            android:dialogTitle="@string/list_preference_title_I"
            android:entries="@array/list_entries"
            android:entryValues="@array/list_entries_value"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="KEY_LAUNCH_PREFERENCE_O"
        android:title="@string/launch_preference_O">
        <PreferenceScreen
            android:key="KEY_LAUNCH_PREFERENCE_I"
            android:title="@string/launch_preference_I"
            android:summary="@string/launch_preference_I_summary">
                <CheckBoxPreference
                    android:key="KEY_LAUNCH_PREFERENCE_CHECKBOX"
                    android:title="@string/toggle_preference"
                    android:summary="@string/toggle_preference_summary"/>
        </PreferenceScreen>
        <PreferenceScreen
            android:title="@string/intent_preference_tite"
            android:summary="@string/intent_preference_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/intent_preference_data"/>
        </PreferenceScreen>

    </PreferenceCategory>
    <PreferenceCategory
        android:key="KEY_PREFERENCE_ATTRIBUTE"
        android:title="@string/preference_attribute">
        <CheckBoxPreference
            android:key="KEY_PREFERENCE_ATTRIBUTE_PARENT"
            android:title="@string/preference_attribute_parent_checkbox_title"
            android:summary="@string/preference_attribute_parent_checkbox_summary"/>
        <CheckBoxPreference
            android:key="KEY_PREFERENCE_ATTRIBUTE_CHILD"
            android:title="@string/preference_attribute_child_checkbox_title"
            android:summary="@string/preference_attribute_child_checkbox_summary"
            android:dependency="KEY_PREFERENCE_ATTRIBUTE_PARENT"/>
    </PreferenceCategory>
</PreferenceScreen>